<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinkToMyAppsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/my_nanodegree_apps" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/layout_left_padding"
        android:paddingRight="@dimen/layout_left_padding"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/btn_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_text_spotify_streamer"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/btn_scores_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_text_scores_app"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/btn_library_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/btn_text_library_app" />

        <Button
            android:id="@+id/btn_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/btn_text_build_it_bigger" />

        <Button
            android:id="@+id/btn_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/btn_text_xyz_reader" />

        <Button
            android:id="@+id/btn_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/btn_text_capstone" />
    </LinearLayout>

</LinearLayout>